style.css
:root {
    /* Color Variables */
    --clr-primary-500: hsl(256, 67%, 59%);
    --clr-primary-100: hsl(254, 88%, 90%);
    --clr-neutral: hsl(0, 0%, 100%);
    --clr-secondary-500: hsl(39, 100%, 71%);
    --clr-secondary-100: hsl(31, 66%, 93%);
    --clr-dark: hsl(0, 0%, 7%);
    --clr-bg: #f5f5f5;

    /* Font Family Variables */
    --ff: 'DM Sans', sans-serif;

    /* Font Weight Variables */
    --fw-400: 400;
    --fw-500: 500;
    --fw-600: 600;
    --fw-700: 700;

    /* Font Size Variables */
    --fs-p: 1.1rem;
    --fs-h3: 1.6rem;
    --fs-h2-5: 2rem;
    --fs-h2: 3rem;

    /* Line Height Variables */
    --line-height-1: .9;
    --line-height-h: .9;

    /* Padding Variables */
    --padding-small: 1rem;
    --padding-medium: 2rem;
    --padding-large: 3rem;
}

/* global stylings */
* {
    font-family: var(--ff);
    font-weight: var(--fw-400);
}

body {
    background-color: var(--clr-bg);
    color: var(--clr-dark);
}

/* typography */
h2 {
    font-weight: var(--fw-500);
    font-size: var(--fs-h2);
    line-height: var(--line-height-1);
}

h3 {
    padding: 1rem;
    color: var(--clr-dark);
    font-weight: var(--fw-600);
    font-size: var(--fs-h3);
    text-wrap: wrap;
    line-height: var(--line-height-1);
    letter-spacing: -2px;
}

p {
    padding: 1rem;
    font-size: var(--fs-p);
    line-height: var(--line-height-1).125;
}

.accent-text {
    color: var(--clr-secondary-500);
}

.primary-text {
    color: var(--clr-primary-500);
    font-weight: var(--fw-500);
}

/* containers */
.container {
    background-color: var(--clr-bg);
    place-items: center;
    max-width: 100%;
    margin-inline: auto;
    padding: 2rem 1.2rem;
}

.grid {
    display: grid;
    grid-auto-columns: minmax(300px, 350px);
    gap: 2rem;
}

/* components */
.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    overflow: hidden;
    background-color: var(--clr-primary-100);
    transition: all 0.3s ease-in-out;
    cursor: pointer;
    box-shadow: 0 5px 2px rgba(0, 0, 10, 0.072);
}

.card:hover {
    transform: scale(1.1);
    box-shadow: 0 5px 5px rgba(0, 0, 10, 0.152);

}

.hero {
    background-color: var(--clr-primary-500);
    text-align: center;
    padding: 2em;
    color: var(--clr-neutral);
}

.hero img {
    width: 60%;
    padding-top: 1rem;

}

.multiple-platforms {
    background-image: linear-gradient(to top, #ffffff, #fefefe, #fdfdfd, #FAF8FB, #fcfcfc, #fefefe, #ffffff);
}

.multiple-platforms img {
    width: 95%;
    padding-top: 1rem;
}

.consistent-schedule {
    background-color: var(--clr-secondary-500);
    align-items: start;
    overflow: hidden;
}

.consistent-schedule img {
    position: relative;
    top: 1.4rem;
    width: 69%;
    padding-left: 1rem;
}

.consistent-schedule h3 {
    padding: 1rem 1rem 0 1rem;
}


.schedule-social-media {
    padding: 1em;
    background-color: var(--clr-primary-100);
    text-align: center;
}

.schedule-social-media img {
    padding: 0.5em 0;
}

.grow-followers {
    background-color: var(--clr-primary-500);
    text-align: center;

}

.grow-followers img {
    width: 85%;
    padding: 2rem;
}

.grow-followers h3 {
    color: var(--clr-neutral);
    font-size: var(--fs-h2-5);
    padding: 1.5rem 3rem;
    line-height: var(--line-height-h);
}

.faster-growth {
    background-color: var(--clr-neutral);
    align-items: start;
    padding: 1em;
}

.faster-growth img {
    width: 60%;
    padding: 0.8rem;
}

.cta {
    background-color: var(--clr-secondary-100);
    align-items: start;
    padding: 1em;
}


.cta h3,
.cta span i {
    line-height: var(--line-height-h);
    font-size: var(--fs-h2-5);
    font-weight: var(--fw-600);
}

.cta img {
    width: 70%;
    padding: 1em;
    transition: all 0.3s ease-in-out;
}

.cta img:hover {
    transform: scale(1.1);
    opacity: 0.8;
}

.ai-content {
    background-color: var(--clr-secondary-500);
    padding: 1em;
    align-items: start;


}

.ai-content h3 {
    font-size: var(--fs-h2-5);
    line-height: var(--line-height-h);
    padding: 1rem;
}

.ai-content img {
    width: 70%;
    padding: 1em;
}






@media (min-width: 575px) {
    :root {
        --fs-p: 1.16rem;
        --fs-h3: 2.2rem;
        --fs-h2-5: 2.4rem;
        --fs-h2: 3.4rem;
    }

    .grid {
        position: relative;
        top: -9.5rem;
        transform: scale(0.75);
        max-height: 100%;
        max-width: 1100px;
        grid-template-columns: repeat(4, 251px);
        grid-template-rows: repeat(8, 8rem);
    }


    .hero {
        grid-column: 2/span 2;
        grid-row: 1/span 2;
    }

    .hero img {
        transition: all 0.2s ease-in-out;
        width: 40%;
    }

    .hero:hover img {
        transform: scale(1.2);
    }

    .hero span {
        transition: all 0.2s ease-in-out;
    }

    .hero:hover span {
        font-weight: var(--fw-700);
    }

    .hero p {
        padding: 0.7rem;
    }

    .cta {
        grid-column: 1;
        grid-row: 1/span 3;
        justify-content: center;
    }

    .cta img {
        width: 100%;
    }

    .ai-content {
        grid-column: 1;
        justify-content: space-between;
        grid-row: 4/span 3;
    }

    .ai-content img {
        padding: 0;
        width: 100%;
        max-width: 300px;
        min-width: 210px;
        transition: all 0.3s ease-in-out;
    }

    .ai-content:hover img {
        transform: scale(1.05);
    }

    .consistent-schedule {
        grid-column: 3;
        grid-row: 3/span 2;
        padding: 3em 1em 0em 1em;
    }

    .consistent-schedule img {
        width: 100%;
        top: 2rem;
        max-width: 280px;
        padding: 0;
        transition: all 0.3s ease-in-out;

    }

    .consistent-schedule img:hover {
        transform: scale(1.1);
        top: -3rem;
    }

    .consistent-schedule h3 {
        padding: 1em 1em 0 0em;
    }

    .multiple-platforms {
        grid-column: 2;
        grid-row: 3/span 2;
        letter-spacing: normal;
        justify-content: space-evenly;
    }

    .multiple-platforms img {
        padding: 0;
    }

    .schedule-social-media {
        grid-column: 4;
        padding: 1.7rem;
        grid-row: 1/span 4;
        gap: 1.5rem;
        justify-content: start;
        text-align: start;
        overflow: hidden;

    }

    .schedule-social-media img {
        position: relative;
        padding: 0;
        left: 90px;
        max-width: 22rem;
        transition: all 0.3s ease-in-out;
    }

    .schedule-social-media img:hover {
        transform: scale(0.7);
        left: 0px;
    }

    .schedule-social-media p {
        font-weight: var(--fw-500);
        padding: 0;
        line-height: 1.2;
    }

    .schedule-social-media h3 {
        padding: 0;
    }

    .grow-followers {
        flex-direction: row;
        grid-column: 3/span 2;
        grid-row: 5/span 2;
        padding: 1em;
        text-align: start;
    }

    .grow-followers img {
        width: 53%;
        padding: 0 1em;
        transition: all 0.3s ease-in-out;
        max-width: 300px;
    }

    .grow-followers h3 {
        padding: 1.5em 0;
    }

    .grow-followers:hover img {
        transform: scale(1.2);
    }


    .faster-growth {
        flex-direction: column;
        justify-content: space-evenly;
        grid-column: 2;
        grid-row: 5/span 2;
    }

    .faster-growth h2 {
        font-size: 4rem;
    }

    .faster-growth img {
        width: 100%;
        transition: all 0.1s;
        padding: 0;
    }

    .faster-growth img:hover {
        transform: scale(1.2);
    }


}

@media (min-width: 575px) and (max-width: 840px) {
    .grid {
        transform: scale(1);
        top: 0;
        max-height: 100%;
        max-width: 700px;
        grid-template-columns: repeat(2, 325px);
        grid-auto-rows: minmax(100px, 8rem);
    }

    .card:hover {
        transform: scale(1.05);
    }

    .hero {
        grid-column: 1/span 2;
        grid-row: 1/span 2;
    }

    .cta {
        grid-column: 1;
        grid-row: 3/7;

    }

    .ai-content {
        grid-column: 2;
        grid-row: 11/span 4;
        gap: 3rem;
    }

    .consistent-schedule {
        grid-column: 1/3;
        grid-row: 7/span 2;
        padding: 2em;

    }

    .consistent-schedule img:hover {
        transform: scale(1.1);
        top: -5px;
    }

    .consistent-schedule img {
        left: 20rem;
        top: 4.5rem;
    }

    .multiple-platforms {
        grid-column: 2;
        grid-row: 3/5;
    }

    .schedule-social-media {
        grid-column: 1;
        grid-row: 11/span 4;
        gap: 3rem;

    }

    .schedule-social-media img {
        left: 0;
        max-width: 18rem;
    }

    .schedule-social-media img:hover {
        transform: scale(1.1);
    }

    .grow-followers {
        grid-column: 1/span 2;
        grid-row: 9/span 2;
    }

    .grow-followers:hover img {
        transform: scale(1.1);
    }

}

